out.txt
$ python backend/run.py
Traceback (most recent call last):
  File "D:\_Edward\Projects\tracker\backend\run.py", line 16, in <module>
    uvicorn.run("backend.main:app", host="127.0.0.1", port=8000, reload=False, loop="asyncio")
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Edward\AppData\Roaming\Python\Python313\site-packages\uvicorn\main.py", line 575, in run
    server.run()
    ~~~~~~~~~~^^
  File "C:\Users\Edward\AppData\Roaming\Python\Python313\site-packages\uvicorn\server.py", line 60, in run
    return asyncio.run(self.serve(sockets=sockets))
           ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Program Files\Python313\Lib\asyncio\runners.py", line 195, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "C:\Program Files\Python313\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "C:\Program Files\Python313\Lib\asyncio\base_events.py", line 719, in run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "C:\Users\Edward\AppData\Roaming\Python\Python313\site-packages\uvicorn\server.py", line 67, in serve
    config.load()
    ~~~~~~~~~~~^^
  File "C:\Users\Edward\AppData\Roaming\Python\Python313\site-packages\uvicorn\config.py", line 479, in load
    self.loaded_app = import_from_string(self.app)
                      ~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\Edward\AppData\Roaming\Python\Python313\site-packages\uvicorn\importer.py", line 21, in import_from_string
    module = importlib.import_module(module_str)
  File "C:\Program Files\Python313\Lib\importlib\__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 1026, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "D:\_Edward\Projects\tracker\backend\main.py", line 17, in <module>
    from backend.engine import TrackerEngine
  File "D:\_Edward\Projects\tracker\backend\engine.py", line 49
    async def execute_step(self, page: Page, step: Dict[str, Any], variables: Dict[str, Any], logger, captured_requests: List[Dict] = None):
SyntaxError: expected 'except' or 'finally' block